[tool.poetry]
name = "contador-de-calorias"
version = "0.1.0"
description = ""
authors = ["sahvsergio <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.26"
pep8 = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
